[package]
name = "cs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitter = "0.6.1"
protobuf-codegen = "3.2.0"
protobuf = "3.2.0"
snap = "1.1.0"
snappy = "0.4.0"
ahash = "0.8.3"
regex = "1.7.3"
phf = "0.11.1"
phf_macros = "0.11.1"

[dependencies.csgoproto]
path = "src/csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

[profile.dev]
overflow-checks = false