[package]
name = "demoparser2"
version = "0.0.1"
edition = "2021"


[lib]
name = "demoparser2"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitter = "0.6.1"
protobuf-codegen = "3.2.0"
protobuf = "3.2.0"
snap = "1.1.0"
snappy = "0.4.0"
ahash = "0.8.3"
regex = "1.7.3"
phf = "0.11.1"
phf_macros = "0.11.1"
pyo3 = { version = "0.17", features = ["extension-module"] }
polars = "0.24.3"
polars-arrow = "0.24.3"
ndarray = "0.15.6"
derive_more = "0.99.17"
itertools = "0.10.5"
smallvec = "1.10.0"





[dependencies.csgoproto]
path = "src/csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

[profile.dev]
overflow-checks = false

[profile.release]
#debug = true

#opt-level = 3
#lto = "fat"
#codegen-units = 1
panic = "abort"