[package]
edition = "2021"
name = "laihoe_demoparser2"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.3"
memmap2 = "0.5.10"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4","serde-json"] }
napi-derive = "2.12.2"
serde_json = "1.0.96"
protobuf-support = "3.3.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[dependencies.parser]
path = "../parser"
features = ["voice"]

[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
