[package]
name = "parser"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitter = "0.6.1"
protobuf = "3.2.0"
snap = "1.1.0"
ahash = "0.8.3"
regex = "1.7.3"
phf = "0.11.1"
phf_macros = "0.11.1"
derive_more = "0.99.17"
itertools = "0.10.5"
smallvec = "1.10.0"
soa_derive = "0.12.0"
lazy_static = "1.4.0"
bit_reverse = "0.1.8"
memmap2 = "0.5.10"



[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

[profile.dev]
overflow-checks = false

[profile.release]
#debug = true

#opt-level = 3
#lto = "fat"
#codegen-units = 1
#panic = "abort"
