[package]
name = "parser"
version = "0.1.1"
edition = "2021"

[dependencies]
bitter = "0.6.2"
protobuf = "3.2.0"
snap = "1.1.0"
ahash = "0.8.3"
regex = "1.7.3"
phf = "0.11.1"
phf_macros = "0.11.1"
derive_more = "0.99.17"
itertools = "0.10.5"
lazy_static = "1.4.0"
bit_reverse = "0.1.8"
memmap2 = "0.5.10"
serde = { version = "1.0.164", features = ["derive"] }
libc = "0.2.147"
rayon = "1.7.0"
protobuf-support = "3.3.0"
proc-macro2 = "1.0.69"
rand = "0.8.5"
bytes = "1.5.0"
audiopus_sys = { version = "0.2.2", features = ["generate_binding"] }
opus = "0.3.0"

[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

[profile.dev]
overflow-checks = false

[profile.release]
debug = true

#opt-level = 3
#lto = "fat"
#codegen-units = 1
#panic = "abort"
