[package]
name = "demoparser2"
version = "0.8.0"
edition = "2021"


[lib]
name = "demoparser2"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
pyo3 = { version = "0.16", features = ["extension-module"] }
polars = "0.24.3"
polars-arrow = "0.24.3"
derive_more = "0.99.17"
itertools = "0.10.5"
memmap2 = "0.5.10"




[dependencies.parser]
path = "../parser"

[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

[profile.dev]
overflow-checks = false

[profile.release]
#debug = true

#opt-level = 3
#lto = "fat"
#codegen-units = 1
#panic = "abort"
