[package]
name = "demoparser2"
version = "0.36.0"
edition = "2021"


[lib]
name = "demoparser2"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
pyo3 = { version = "0.22", features = ["extension-module"] }
polars = "0.41.2"
polars-arrow = { version = "0.41.2"}
derive_more = "0.99.17"
itertools = "0.13.0"
memmap2 = "0.9.4"
protobuf-support = "3.3.0"

[dependencies.parser]
path = "../parser"

[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

[profile.dev]
overflow-checks = false

[features]
default = ["parser/voice", "voice"]
voice = []