[package]
name = "demoparser2"
version = "0.1.0"
authors = ["LaihoE"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
itertools = "0.10.5"
web-sys = { version = "0.3.61", features = ["console"] }
wasm-bindgen-file-reader = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }



[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[dependencies.parser]
path = "../parser"

[dependencies.csgoproto]
path = "../csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]

# https://github.com/Badel2/wasm-bindgen-file-reader
wasm-bindgen-file-reader = "1"
