[package]
name = "demoparser2"
version = "0.1.0"
authors = ["LaihoE"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
wasm-bindgen-rayon = { version = "1.2.2", optional = true }
itertools = "0.13.0"
web-sys = { version = "0.3.72", features = ["console"] }
getrandom = { version = "0.2.15", features = ["js"] }

[features]
threads = ["dep:wasm-bindgen-rayon"]

[profile.release]
# debug = true
strip = true
lto = "fat"
opt-level = 2
codegen-units = 1
# panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-threads", "--enable-bulk-memory", "-O2", "-O4"]
# wasm-opt = false

[dependencies.parser]
path = "../parser"
